--- a/actividades.html
+++ b/actividades.html
@@ -4,7 +4,7 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Altos del Torrontés – Actividades</title>
-  <link rel="stylesheet" href="css/style.css?v=30">
+  <link rel="stylesheet" href="css/style.css?v=33">
   <link href="https://fonts.googleapis.com/css2?family=Lato:wght@400;700&family=Playfair+Display:wght@500;700&display=swap" rel="stylesheet">
 
   <style>
@@ -16,20 +16,23 @@
       scroll-behavior: smooth;
     }
 
-    /* ======= CABECERA ======= */
+    /* ======= PORTADA ======= */
     header {
-      background: url('img/hotel_2.jpg') center/cover no-repeat;
+      background: url('img/Viñedo.png') center/cover no-repeat;
       color: white;
       text-align: center;
-      padding: 140px 20px;
+      height: 120vh; /* 🔹 ahora más grande que antes */
       position: relative;
+      display: flex;
+      align-items: center;
+      justify-content: center;
     }
 
     header::after {
       content: "";
       position: absolute;
       inset: 0;
-      background: rgba(0, 0, 0, 0.4);
+      background: linear-gradient(rgba(0, 0, 0, 0.35), rgba(0, 0, 0, 0.6));
     }
 
     header h1, header p {
@@ -39,16 +42,16 @@
 
     header h1 {
       font-family: 'Playfair Display', serif;
-      font-size: clamp(2.2em, 5vw, 3.2em);
+      font-size: clamp(2.5em, 6vw, 4.5em);
       margin-bottom: 10px;
-      text-shadow: 0 3px 10px rgba(0,0,0,0.6);
+      text-shadow: 0 4px 15px rgba(0, 0, 0, 0.6);
     }
 
     header p {
-      font-size: 1.3em;
+      font-size: 1.4em;
+      text-shadow: 0 3px 12px rgba(0, 0, 0, 0.7);
     }
 
-    /* ======= CONTENIDO ======= */
     main {
       padding: 60px 10%;
     }
@@ -57,7 +60,7 @@
       color: #8C1C13;
       font-family: 'Playfair Display', serif;
       text-align: center;
-      font-size: 2em;
+      font-size: 2.2em;
       margin-bottom: 10px;
     }
 
@@ -69,23 +72,19 @@
       font-size: 1.1em;
     }
 
-    /* ======= BLOQUES DE ACTIVIDAD ======= */
     .activity {
       display: flex;
       flex-wrap: wrap;
       align-items: center;
-      justify-content: center;
       margin-bottom: 70px;
-      gap: 40px;
+      gap: 30px;
     }
 
     .activity img {
       width: 100%;
       max-width: 520px;
-      height: 340px;
-      object-fit: cover;
-      border-radius: 16px;
-      box-shadow: 0 8px 25px rgba(0, 0, 0, 0.25);
+      border-radius: 14px;
+      box-shadow: 0 6px 18px rgba(0,0,0,0.25);
       transition: transform 0.3s ease;
     }
 
@@ -98,7 +97,6 @@
       font-size: 1.1em;
       line-height: 1.7;
       text-align: left;
-      max-width: 500px;
     }
 
     .activity-text h3 {
@@ -112,7 +110,6 @@
         flex-direction: column !important;
         text-align: center;
       }
-
       .activity-text {
         text-align: center;
       }
@@ -157,63 +154,57 @@
       </p>
     </section>
 
-    <!-- CATA DE VINOS -->
+    <!-- 🍷 CATA DE VINOS -->
     <section class="activity">
-      <img src="https://images.unsplash.com/photo-1618568949774-15d741a57a20?auto=format&fit=crop&w=1200&q=80" alt="Cata de vinos en bodega boutique">
+      <img src="img/Copas.png" alt="Cata de vinos con copas en bodega boutique">
       <div class="activity-text">
         <h3>🍷 Cata de vinos guiada</h3>
         <p>Descubrí los secretos del vino de altura con nuestros sommeliers. Aprendé sobre aromas, notas y maridajes
         mientras degustás las mejores etiquetas de la región.</p>
+      </div>  
+    </section>
+
+    <!-- 🐎 CABALGATAS -->
+    <section class="activity" style="flex-direction: row-reverse;">
+      <img src="img/caballo.png" alt="Cabalgatas entre viñedos y montañas">
+      <div class="activity-text">
+        <h3>🐎 Cabalgatas entre viñedos</h3>
+        <p>Explorá los senderos de los Valles Calchaquíes a caballo, acompañado por guías locales que te mostrarán
+        la flora, la fauna y las historias del lugar.</p>
       </div>
     </section>
 
-    <!-- CABALGATAS -->
-<section class="activity" style="flex-direction: row-reverse;">
-  <img src="img/caballo.png" alt="Cabalgatas entre viñedos y montañas en los Valles Calchaquíes">
-  <div class="activity-text">
-    <h3>🐎 Cabalgatas entre viñedos</h3>
-    <p>
-      Explorá los senderos de los Valles Calchaquíes a caballo, acompañado por guías locales que te mostrarán
-      la flora, la fauna y las historias del lugar.  
-      Disfrutá del aire puro, los paisajes imponentes y la conexión con la naturaleza en su máxima expresión.
-    </p>
-  </div>
-</section>
-
-    <!-- SPA ENTRE VIÑEDOS -->
+    <!-- 💆 SPA -->
     <section class="activity">
       <img src="img/spa.png" alt="Spa entre viñedos">
       <div class="activity-text">
-        <h3>💆‍♀️ Spa & Vinoterapia</h3>
+        <h3>💆 Spa & Vinoterapia</h3>
         <p>Relajate en nuestro spa inmerso en la naturaleza. Tratamientos con uvas y aceites locales, rodeado de
         viñedos y el sonido del viento entre las montañas.</p>
       </div>
     </section>
 
-    <!-- SENDERISMO -->
+    <!-- 🥾 SENDERISMO -->
     <section class="activity" style="flex-direction: row-reverse;">
-      <img src="img/senderismo.png" alt="Senderismo por los Valles Calchaquíes">
+      <img src="img/senderismo.png" alt="Senderismo en los cerros">
       <div class="activity-text">
         <h3>🥾 Senderismo en los cerros</h3>
         <p>Recorré los caminos ancestrales entre montañas, con vistas únicas y aire puro.
-        Caminatas de baja y media dificultad adaptadas a todos los visitantes, guiadas por expertos locales que te conectarán con la historia y naturaleza de los Valles Calchaquíes.</p>
+        Caminatas de baja y media dificultad adaptadas a todos los visitantes.</p>
       </div>
     </section>
 
-    <!-- GUÍAS LOCALES -->
+    <!-- 👣 GUÍA -->
     <section class="activity">
-      <img src="img/Guia.png" alt="Guía turístico acompañando a visitantes por los cerros">
+      <img src="img/Guia.png" alt="Guía turística en los viñedos">
       <div class="activity-text">
-        <h3>🧭 Guías Locales & Excursiones</h3>
-        <p>
-          Acompañate de guías expertos que conocen cada rincón de los Valles Calchaquíes.  
-          Descubrí los secretos del paisaje, la historia y la cultura del norte argentino a través de excursiones únicas, seguras y llenas de encanto.
-        </p>
+        <h3>👣 Guías locales</h3>
+        <p>Conocé la historia, la cultura y las tradiciones del norte argentino acompañado por nuestros guías expertos que harán de cada paseo una experiencia inolvidable.</p>
       </div>
     </section>
   </main>
 
-  <!-- ======= PIE DE PÁGINA ======= -->
+  <!-- ======= PIE ======= -->
   <footer>
     <p>📍 Ruta Nacional 40 km 4349 – Animaná, Salta</p>
     <p>📧 info@altosdeltorrontes.com | ☎ +54 387 400 0000</p>
